<resources>
    <string name="app_name">Fornadagora</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="logar">Logar</string>
    <string name="senha">Senha</string>
    <string name="loginEmail">E-mail</string>
    <string name="enviar">Enviar</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tituloapp">FORNADAGORA</string>
    <string name="recuperarsenha">Recuperar senha</string>
    <string name="cadastrarfuncionario">Cadastrar funcionário</string>
    <string name="cadastrarUsuario">Cadastrar Usuário</string>
    <string name="senhaconfirmar">Confirmar senha</string>
    <string name="titulotelabuscarpadaria">Map</string>
    <string name="nomepadaria">Nome da padaria</string>
    <string name="salvar">Salvar</string>
    <string name="escolhapadaria">Escolha a padaria:</string>
    <string name="escolhaproduto">Escolha o(s) produto(s)</string>
    <string name="paodequeijo">Pão de Queijo</string>
    <string name="coxinha">Coxinha</string>
    <string name="tituloadicionarproduto">Adicionar Produto(s)</string>
    <string name="buscarpadaria">Buscar Padarias</string>
    <string name="title_activity_ver_padarias_mapa">Map</string>
    <string name="titulotelacadastraralerta">Cadastrar Alerta</string>
    <string name="nomealerta">Nome do alerta</string>
    <string name="nomeproduto">Nome do produto</string>
    <string name="padaria">Padaria</string>
    <string name="veralertasalvo">Ver alerta(s) salvo(s)</string>
    <string name="botaoeditar">Ver alerta(s) salvo(s)</string>
    <string name="deslogarusuario">Sair</string>
    <string name="ver_alertas">Alertas salvos</string>
    <string name="editar_dados">Editar dados</string>
    <string name="editar_alerta">Editar alerta</string>
    <string name="editar_categoria">Editar categoria</string>
    <string name="editar_dados_funcionario">Editar dados funcionário</string>
    <string name="sair">Sair</string>
    <string name="nomedousuario">Informe seu nome</string>
    <string name="emaildousuario">Informe seu e-mail</string>
    <string name="senhadousuario">Informe sua senha</string>
    <string name="confirmarsenhadousuario">Confirme sua senha</string>
    <string name="nomedofuncionario">Informe seu nome</string>
    <string name="emaildofuncionario">Informe seu e-mail</string>
    <string name="senhadofuncionario">Informe sua senha</string>
    <string name="confirmarsenhadofuncionario">Confirme sua senha</string>
    <string name="escolhafuncionario">Escolha um funcionario:</string>
    <string name="enviaralerta">Enviar alerta</string>
    <string name="adicionarpadaria">Adicionar padaria</string>
    <string name="cancelar">Cancelar</string>
    <string name="notificarusuario">Notificar</string>
    <string name="escolhaumproduto">Escolha um produto:</string>
    <string name="menu">Menu Principal</string>
    <string name="adicionarproduto">Adicionar produto</string>
    <string name="escolhacategoria">Escolha a categoria:</string>
    <string name="cadastrarproduto">Cadastrar produto</string>
    <string name="cadastrarcategoria">Cadastrar categoria</string>
    <string name="escolhaumacategoria">Escolha uma categoria:</string>
    <string name="nenhumalerta">Nenhum alerta cadastrado :(</string>
    <string name="nenhumproduto">Nenhum produto salvo :(</string>
    <string name="nenhumacategoria">Nenhuma categoria salva :(</string>
    <string name="naopossuiconta">Não possui uma conta? Cadastre-se</string>
    <string name="todo">A definir</string>
    <string name="gerenciarcategorias">Gerenciar categorias</string>
    <string name="nomecategoria">Nome da categoria</string>
    <string name="ver_produtos">Ver produtos</string>
    <string name="gerenciarprodutos">Gerenciar produtos</string>

    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textfield_label">ATesteeeee</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="excluir">Excluir sua conta</string>

</resources>
