<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alertas_salvos_usu"
            android:icon="@drawable/ic_editar_alertas"
            android:title="@string/ver_alertas" />
        <item
            android:id="@+id/nav_edit_dados_usu"
            android:icon="@drawable/ic_editar_dados"
            android:title="@string/editar_dados" />
        <item
            android:id="@+id/nav_edit_dados_fun"
            android:icon="@drawable/ic_editar_dados"
            android:title="@string/editar_dados" />
        <item
            android:id="@+id/nav_edit_adm_dados_fun"
            android:icon="@drawable/ic_editar_dados"
            android:title="@string/editar_dados_funcionario" />
        <item
            android:id="@+id/nav_cadastrar_categoria"
            android:icon="@drawable/ic_add_categoria_24"
            android:title="@string/cadastrarcategoria" />
        <item
            android:id="@+id/nav_gerenciar_categorias"
            android:icon="@drawable/ic_categoria_24"
            android:title="@string/gerenciarcategorias" />
        <item
            android:id="@+id/nav_gerenciar_produtos"
            android:icon="@drawable/ic_categoria_24"
            android:title="@string/gerenciarprodutos" />
        <item
            android:id="@+id/nav_excluir_conta"
            android:icon="@drawable/ic_deletar_24"
            android:title="@string/excluir" />
    </group>
</menu>